--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,25 @@
+---
+const links = [
+  { text: "👨🏽‍🚀 Home", href: "/" },
+  { text: "📚 Blog", href: "/blog" },
+];
+---
+
 <header
   class="flex px-24 py-12 max-sm:px-5 max-sm:py-10 max-w-7xl w-full mx-auto"
 >
-  <a href="/" class="flex items-center gap-x-4">
-    <p class="uppercase text-3xl text-stone-900">👨🏽‍🚀</p>
-  </a>
-  <a href="/blog" class="flex items-center gap-x-4">
-    <p class="uppercase text-3xl text-stone-900">📚</p>
-  </a>
+  <ul class="flex gap-x-9">
+    {
+      links.map((link) => (
+        <li>
+          <a
+            href={link.href}
+            class="uppercase text-xl text-stone-500 hover:text-stone-700"
+          >
+            {link.text}
+          </a>
+        </li>
+      ))
+    }
+  </ul>
 </header>
