Add an emoji for effect

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,6 @@ import Divider from "@components/Divider.astro";
 
 <Layout title="Ad Astro">
   <Title text="Ad Astro" />
-  <Subtitle text="A developer's blog for the Astro framework." />
+  <Subtitle text="A developer's blog for the Astro framework 🚀" />
   <Divider />
 </Layout>
