--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const links = [
         <li>
           <a
             href={link.href}
-            class="uppercase text-xl text-stone-500 hover:text-stone-700"
+            class="text-xl text-stone-500 hover:text-stone-700"
           >
             {link.text}
           </a>
