--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -8,12 +8,19 @@ interface Props {
 const { post } = Astro.props;
 ---
 
-<article>
-  <a
-    href=`/blog/${post.slug}`
-    class="text-4xl text-zinc-900 mb-4 font-semibold inline-block"
+<a href=`/blog/${post.slug}`>
+  <article
+    class="group border border-zinc-300 hover:border-zinc-900 hover:bg-zinc-900 rounded-xl px-10 pt-10 pb-4 duration-100"
   >
-    <h2>{post.data.title}</h2>
-  </a>
-  <p class="text-zinc-500 text-2xl mb-9 line-clamp-2">{post.body}</p>
-</article>
+    <h2
+      class="group-hover:text-zinc-50 text-2xl text-zinc-900 mb-4 font-semibold inline-block duration-100"
+    >
+      {post.data.title}
+    </h2>
+    <p
+      class="group-hover:text-zinc-400 text-zinc-500 text-lg mb-9 line-clamp-2 duration-100"
+    >
+      {post.body}
+    </p>
+  </article>
+</a>
