Adjust border and shadow styles

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -10,7 +10,7 @@ const { post } = Astro.props;
 
 <a href=`/blog/${post.slug}`>
   <article
-    class="group border border-zinc-300 hover:border-zinc-900 hover:bg-zinc-900 rounded-xl px-10 pt-10 pb-4 duration-100"
+    class="group border border-zinc-100 hover:border-zinc-900 hover:bg-zinc-900 rounded-xl px-10 pt-10 pb-4 duration-100 shadow-xl hover:shadow-md"
   >
     <h2
       class="group-hover:text-zinc-50 text-2xl text-zinc-900 mb-4 font-semibold inline-block duration-100"
