Change header to navbar for semantics

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,9 +5,7 @@ const links = [
 ];
 ---
 
-<header
-  class="flex px-24 py-12 max-sm:px-5 max-sm:py-10 max-w-7xl w-full mx-auto"
->
+<nav class="flex px-24 py-12 max-sm:px-5 max-sm:py-10 max-w-7xl w-full mx-auto">
   <ul class="flex gap-x-9">
     {
       links.map((link) => (
@@ -22,4 +20,4 @@ const links = [
       ))
     }
   </ul>
-</header>
+</nav>
