--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "@fontsource-variable/rubik";
-import Header from "@components/Header.astro";
+import Navbar from "@components/Navbar.astro";
 import Footer from "@components/Footer.astro";
 
 interface Props {
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="min-h-screen grid grid-rows-[auto,1fr,auto]">
-    <Header />
+    <Navbar />
     <main class="px-5 sm:px-24 w-full max-w-7xl mx-auto">
       <slot />
     </main>
